--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -19,7 +19,6 @@
     position:absolute;
     padding-left:50%-1px;
 } */
-
 .tab-bar{
     display: flex;
     flex-direction: column;
@@ -28,6 +27,16 @@
     min-width: 100%;
     /* min-height: 100vh; */
     position: sticky;
+}
+@media screen and (min-width: 0px) {
+    .tab-label-text{
+        display: none;
+    }
+}
+@media screen and (min-width: 398px) {
+    .tab-label-text{
+        display: inline;
+    }
 }
 
 .tabs .ant-tabs-nav{
